--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,7 +10,7 @@
         android:id="@+id/search_container"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
 
