添加web页面，初步完成搜索功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"/>
 
     <LinearLayout
+        android:background="#fff"
         android:id="@+id/tools"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
