添加webView加载进度条

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,58 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#ffffff"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context="com.liangfeng.mbrowser.view.MainActivity">
 
     <FrameLayout
         android:id="@+id/contains"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <LinearLayout
-        android:background="#fff"
         android:id="@+id/tools"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="#fff"
+        android:orientation="horizontal">
 
         <ImageView
-            android:contextClickable="true"
             android:id="@+id/ivWindows"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:clickable="true"
-            android:src="@mipmap/windows"
             android:layout_width="0dp"
-            android:layout_height="30dp" />
-
-         <ImageView
-             android:layout_marginTop="5dp"
-            android:layout_weight="1"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
-            android:clickable="true"
-            android:src="@mipmap/tool_arrow"
-            android:layout_width="0dp"
-            android:layout_height="30dp" />
-
-         <ImageView
             android:layout_weight="1"
-            android:layout_gravity="center_vertical"
             android:clickable="true"
-            android:src="@mipmap/tool_menu"
-            android:layout_width="0dp"
-            android:layout_height="30dp" />
+            android:contextClickable="true"
+            android:src="@mipmap/windows" />
 
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:src="@mipmap/tool_arrow" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:src="@mipmap/tool_menu" />
 
 
     </LinearLayout>
 
-    <FrameLayout
-        android:layout_above="@id/tools"
+    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
+        android:id="@+id/mProgress"
+        android:layout_above="@+id/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="1dp"
+        app:rcProgress="0.0"
+        app:rcSecondaryProgress="0.0"
+        app:rcMax="100.0"
+        app:rcRadius="5dp"
+        app:rcBackgroundPadding="0dp"
+        app:rcReverse="false"
+        app:rcProgressColor="#80D8FF"
+        app:rcSecondaryProgressColor="#40C4FF"
+        app:rcBackgroundColor="#FFF" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/tools" />
 
 </RelativeLayout>
