--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -56,7 +56,7 @@
         android:id="@+id/rvSearch"
         android:layout_above="@+id/search_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 
 </RelativeLayout>
