--- a/app/src/main/res/layout/item_bookmark.xml
+++ b/app/src/main/res/layout/item_bookmark.xml
@@ -6,19 +6,6 @@
     android:orientation="vertical"
     android:padding="@dimen/dp_10">
 
-    <LinearLayout
-        android:background="#f00"
-        android:id="@+id/timeFlag"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/tvTime"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textSize="@dimen/text_size12" />
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,6 +23,9 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
+            android:ellipsize="end"
+            android:maxEms="7"
+            android:singleLine="true"
             android:text="标题"
             android:textSize="@dimen/text_size14" />
     </LinearLayout>
