完成浏览记录的删除功能

--- a/app/src/main/res/layout/item_bookmark.xml
+++ b/app/src/main/res/layout/item_bookmark.xml
@@ -13,6 +13,14 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:visibility="gone"
+            android:id="@+id/ivSelectItemBookmark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/dp_10"
+            android:src="@mipmap/bookmark_select_no" />
+
+        <ImageView
             android:id="@+id/ivItemBookmark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
