--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -17,42 +17,23 @@
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabLayout"
-                android:layout_width="300dp"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:layout_centerInParent="true" />
+                android:layout_marginLeft="50dp" />
 
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/tvFinish"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dp_10"
+                android:padding="@dimen/dp_10"
+                android:text="@string/finish" />
 
         </RelativeLayout>
-        <!--<RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:id="@+id/centerFlag"
-                android:layout_width="1dp"
-                android:layout_height="10dp"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:orientation="vertical" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/centerFlag"
-                android:text="@string/bookmark"
-                android:textSize="@dimen/text_size18" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/centerFlag"
-                android:text="@string/history"
-                android:textSize="@dimen/text_size18" />
-
-        </RelativeLayout>-->
 
 
     </android.support.v7.widget.Toolbar>
@@ -62,5 +43,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/titleBar" />
+
+    <RelativeLayout
+        android:id="@+id/clearContainer"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        >
+
+        <TextView
+            android:id="@+id/tvClear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dp_10"
+            android:padding="@dimen/dp_10"
+            android:text="@string/clear" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
