--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/titleBar"
@@ -23,7 +25,6 @@
 
 
             <TextView
-                android:visibility="gone"
                 android:id="@+id/tvFinish"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -31,7 +32,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/dp_10"
                 android:padding="@dimen/dp_10"
-                android:text="@string/finish" />
+                android:text="@string/finish"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
@@ -48,8 +50,7 @@
         android:id="@+id/clearContainer"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        >
+        android:layout_alignParentBottom="true">
 
         <TextView
             android:id="@+id/tvClear"
