--- a/app/src/main/res/layout/item_bookmark.xml
+++ b/app/src/main/res/layout/item_bookmark.xml
@@ -18,7 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/dp_10"
-            android:src="@mipmap/bookmark_select_no" />
+            android:src="@mipmap/bookmark_select_no"
+            />
 
         <ImageView
             android:id="@+id/ivItemBookmark"
